# prof-rank

./: README.md  main.py  pyproject.toml
prof-rank/: __init__.py  main.py
prof-rank/utils/: VectorDatabase.py  display.py  ranking.py  scraping.py
