[tool.poetry]
name = "professor-finder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.42.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
urllib3 = "^2.2.2"
faiss-cpu = "^1.8.0.post1"
transformers = "^4.44.2"
torch = "^2.4.0"
pymilvus = "^2.4.5"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

